...
) {
    OutlinedTextField(
        value = text,
        onValueChange = { onTextChange(it) },
        label = { Text(stringResource(labelName), color = White) },
        singleLine = true,
        modifier = Modifier.testTag("TextInput")
            .fillMaxWidth(),
        colors = OutlinedTextFieldDefaults.colors(
            focusedTextColor = Grey,
            focusedLabelColor = White,
            unfocusedTextColor = Grey,
            unfocusedLabelColor = White,
...
) {
    OutlinedTextField(
        value = phone,
        onValueChange = { onPhoneChange(it) },
        label = { Text(stringResource(labelName), color = White) },
        singleLine = true,
        modifier = Modifier.fillMaxWidth().testTag("PhoneInput"),
        colors = OutlinedTextFieldDefaults.colors(
            focusedTextColor = Grey,
            focusedLabelColor = White,
            unfocusedTextColor = Grey,
            unfocusedLabelColor = White,
            errorTextColor = Grey,
...
