...
    <string name="and">"and "</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="download">Download</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save_changes">Save Changes</string>
    <string name="phone_number">Phone Number</string>
    <string name="terms">Terms</string>
    <string name="change_service">Changes to the Service and/or Terms :</string>
    <string name="term_describe">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        Eget ornare quam vel facilisis feugiat amet sagittis arcu, tortor. Sapien, consequat
        ultrices morbi orci semper sit nulla. Leo auctor ut etiam est, amet aliquet ut vivamus.
...
